[package]
name = "opengl-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl33 = "0.2.*"
glutin = "0.28.*"
openxr = { version = "0.16.0", features = ["static"] }
image = "0.24.*"
cgmath = "0.18.*"
c_str_macro = "1.0.3"